--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,51 @@
   <version>0.6-SNAPSHOT</version>
 
   <name>User Agent Sniffer</name>
+  <description>Java-based user agent sniffing tool that detects all major browsers, distinguishing versions, mobile/desktop, phone, etc.</description>
   <url>http://www.github.com/znerd/uasniffer</url>
+
+  <licenses>
+    <license>
+      <name>The BSD 2-Clause License</name>
+      <url>http://www.opensource.org/licenses/bsd-license.php</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <parent>
+    <groupId>org.znerd</groupId>
+    <artifactId>znerd-oss-parent</artifactId>
+    <version>2</version>
+  </parent>
+
+  <scm>
+    <connection>scm:git:git@github.com:znerd/uasniffer.git</connection>
+    <developerConnection>scm:git:git@github.com:znerd/uasniffer.git</developerConnection>
+    <url>git@github.com:znerd/uasniffer.git</url>
+    <tag>HEAD</tag>
+  </scm>
+
+  <issueManagement>
+    <system>GitHub</system>
+    <url>https://github.com/znerd/uasniffer/issues</url>
+  </issueManagement>
+
+  <developers>
+    <developer>
+      <id>ernst</id>
+      <name>Ernst de Haan</name>
+      <email>ernst@ernstdehaan.com</email>
+      <url>http://ernstdehaan.com/</url>
+      <roles>
+        <role>architect</role>
+        <role>developer</role>
+      </roles>
+      <timezone>Europe/Amsterdam</timezone>
+      <properties>
+        <picUrl>http://ernstdehaan.com/ernst.jpg</picUrl>
+      </properties>
+    </developer>
+  </developers>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
