--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.znerd</groupId>
   <artifactId>uasniffer</artifactId>
-  <version>1.1</version>
+  <version>1.2-SNAPSHOT</version>
 
   <name>User Agent Sniffer</name>
   <description>Java-based user agent sniffing tool that detects all major browsers, distinguishing versions, mobile/desktop, phone, etc.</description>
@@ -26,7 +26,7 @@
     <connection>scm:git:git@github.com:znerd/uasniffer.git</connection>
     <developerConnection>scm:git:git@github.com:znerd/uasniffer.git</developerConnection>
     <url>git@github.com:znerd/uasniffer.git</url>
-    <tag>uasniffer-1.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
